Unreviewed non-unified build fix 2024-07-31 https://bugs.webkit.org/show_bug.cgi?id=277389

* Source/WebCore/page/OpportunisticTaskScheduler.cpp:
* Source/WebCore/rendering/mathml/RenderMathMLScripts.h:

Canonical link: https://commits.webkit.org/281622@main